manifests/sttts-bot-deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: sttts-bot
spec:
  replicas: 1
  selector:
    deploymentconfig: sttts-bot
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        deploymentconfig: sttts-bot
        app: sttts-bot
    spec:
      containers:
      - image: sttts-bot:latest
        name: sttts-bot
        volumeMounts:
        - mountPath: "/home"
          name: home
      securityContext:
        fsGroup:
      volumes:
      - name: home
        persistentVolumeClaim:
          claimName: sttts-bot-home
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - sttts-bot
      from:
        kind: ImageStreamTag
        name: sttts-bot:latest
    type: ImageChange
