manifests/sttts-bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sttts-bot
spec:
  selector:
    app: sttts-bot
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
